<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/select_search_by_provider"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_github_provider"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_background_btn_provider_default"
            android:text="@string/github"
            android:textSize="@dimen/text_size_14"
            android:textColor="@color/grey_500"
            android:textStyle="normal" />

        <Button
            android:id="@+id/btn_search_gov_provider"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:textSize="@dimen/text_size_14"
            android:background="@drawable/gradient_background_btn_provider_default"
            android:text="@string/search_gov"
            android:textColor="@color/grey_500"
            android:textStyle="normal" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/filter_by_position"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_15"
        android:textStyle="bold" />

    <AutoCompleteTextView
        android:id="@+id/auto_complete_position"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:completionThreshold="1"
        android:ems="10"
        android:hint="@string/txt_search_position_hint"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:textColorHighlight="@color/colorAccent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/filter_by_location"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold" />

    <AutoCompleteTextView
        android:id="@+id/auto_complete_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:completionThreshold="1"
        android:ems="10"
        android:hint="@string/txt_search_location_hint"
        android:imeOptions="actionDone"
        android:nextFocusForward="@id/auto_complete_location"
        android:singleLine="true"
        android:textColorHighlight="@color/colorAccent" />

    <Button
        android:id="@+id/btn_submit_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/gradient_btn_rounded"
        android:text="@string/txt_submit_filter"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_15"
        android:textStyle="bold" />

</LinearLayout>