<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ly_main_content_socket"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_no_data"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_120"
            android:contentDescription="@string/txt_image_logo"
            app:srcCompat="@drawable/ic_no_data_found" />

        <TextView
            android:id="@+id/tv_title_socket_timeout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:text="@string/txt_ooops"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_19"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_desc_socket_timeout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/txt_we_could_t_find_a_match_for_your_search"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_15" />

        <Button
            android:id="@+id/btn_socket_timeout"
            android:layout_width="@dimen/margin_200"
            android:layout_height="@dimen/margin_45"
            android:layout_marginTop="50dp"
            android:background="@drawable/gradient_btn_rounded"
            android:padding="10dp"
            android:text="@string/txt_try_another_search"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_15" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_load_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible" />
</LinearLayout>