<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/cons_layout_search"
    tools:context=".presentation.ui.searchActivity.SearchActivity"
    tools:layout_editor_absoluteY="81dp">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_18"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/ed_search_by_title"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:drawableEnd="@drawable/ic_search_black_24dp"
            android:drawableRight="@drawable/ic_search_black_24dp"
            android:ems="10"
            android:background="@android:color/transparent"
            android:hint="@string/txt_search_position_hint"
            android:inputType="textPersonName"
            android:maxLines="1"
            tools:text="" />
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/margin_48"
        android:gravity="center|start"
        android:text="@string/txt_you_re_here_for_a_job"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_15"
        app:layout_constraintTop_toTopOf="parent"
        card_view:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:gravity="center|start"
        android:text="@string/txt_we_re_here_to_help"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_30"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        card_view:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_13"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/txt_what"
        android:textColor="@color/grey_800"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        card_view:layout_constraintStart_toStartOf="parent" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="210dp"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/ed_search_by_location"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:background="@android:color/transparent"
            android:drawableEnd="@drawable/ic_location_on_black_24dp"
            android:drawableRight="@drawable/ic_location_on_black_24dp"
            android:hint="@string/txt_search_location_hint"
            android:inputType="textPersonName"
            android:textColorHighlight="@android:color/transparent"
            tools:layout_editor_absoluteX="49dp"
            tools:layout_editor_absoluteY="259dp"
            tools:text="" />
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/txt_where"
        android:textColor="@color/grey_800"
        app:layout_constraintBottom_toTopOf="@+id/cardView2"
        card_view:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_find_jobs"
        android:layout_width="@dimen/margin_145"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/gradient_btn_rounded"
        android:text="@string/txt_find_jobs"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />
</android.support.constraint.ConstraintLayout>