<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground">


    <ImageView
        android:id="@+id/img_item_logo"
        android:layout_width="@dimen/margin_70"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/txt_image_logo"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_load_image" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:maxLines="2"
        android:textSize="@dimen/text_size_15"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_company_name"
        app:layout_constraintEnd_toEndOf="@+id/tv_date"
        app:layout_constraintStart_toEndOf="@+id/img_item_logo"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/txt_job_title" />

    <TextView
        android:id="@+id/tv_company_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:maxLines="1"
        android:textSize="@dimen/text_size_14"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_date"
        app:layout_constraintStart_toEndOf="@+id/img_item_logo"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/txt_company_name" />

    <TextView
        android:id="@+id/tv_location_company"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:maxLines="1"
        android:textSize="@dimen/text_size_14"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_date"
        app:layout_constraintStart_toEndOf="@+id/img_item_logo"
        tools:text="@string/txt_location" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="80dp"
        android:layout_height="25dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/gradient_btn_rounded"
        android:gravity="center"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_13"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="12/2/2019" />

</android.support.constraint.ConstraintLayout>